Update Telegram bot token in Index.html

--- a/Index.html
+++ b/Index.html
@@ -1556,8 +1556,8 @@
 
     // Send order to Telegram  
     function sendOrderToTelegram(orderData) {  
-        const botToken = '8225381984:AAHdswwdsubuG8bm_uEDNO_sCqETc-8qn2U';  
-        const chatId = '7648222662';  // O'zgartirilgan chat ID
+        const botToken = '8557616899:AAEp07-E4E-q5X66FDX718pcOOXUSw01qZ4';  
+        const chatId = '7648222662';  
 
         // Format message  
         let message = `🛒 Yangi buyurtma!\n\n`;  
@@ -1636,8 +1636,8 @@
 
     // Send message to Telegram  
     function sendMessageToTelegram(messageData) {  
-        const botToken = '8225381984:AAHdswwdsubuG8bm_uEDNO_sCqETc-8qn2U';  
-        const chatId = '7648222662';  // O'zgartirilgan chat ID
+        const botToken = '8557616899:AAEp07-E4E-q5X66FDX718pcOOXUSw01qZ4';  
+        const chatId = '7648222662';  
 
         // Format message  
         let message = `📩 Yangi xabar!\n\n`;  
@@ -1693,4 +1693,4 @@
 </script>
 
 </body>  
-</html>
+</html>  
